--- a/src/components/MovieElement/MovieElement.css
+++ b/src/components/MovieElement/MovieElement.css
@@ -2,6 +2,7 @@
   display: flex;
   margin: 2em 0;
   font-size: .65rem;
+  padding-right: .5em;
 }
 
 .movieElement:hover {
@@ -37,4 +38,9 @@ hr {
 .noPosterMsg {
     margin-top: 1em;
     font-weight: 700;
+}
+
+a {
+    text-decoration: unset;
+    color: unset;
 }
