--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,11 @@
 h1.question {
   text-align: center;
 }
+
+.button {
+  background-color: green;
+  text-align: center;
+  padding: .5em .35em;
+  margin-top: .5em 0;
+  color: white;
+}
