--- a/src/App.css
+++ b/src/App.css
@@ -45,16 +45,19 @@ h1.question {
   flex-direction: column;
   align-items: center;
   width: 80%;
+  max-width: 1000px;
   margin: 1em auto;
   gap: .25em;
   text-align: center;
 }
-
-
 
 .recommendationElement > img {
   width: 208px;
   height: 362px;
   display: block;
   margin-bottom: .25em;
+}
+
+.recdGenres {
+  color: #678;
 }
