Added a box shadow to the movie element

--- a/src/components/MovieElement/MovieElement.css
+++ b/src/components/MovieElement/MovieElement.css
@@ -7,8 +7,9 @@
 }
 
 .movieElement:hover {
-    background-color: #231933;
-    cursor: pointer;
+    
+  box-shadow: 0 1px 5px rgba(0,0,0,.25),0 1px 10px rgba(255, 255, 255, 0.35);
+  cursor: pointer;
 }
 
 .moviePoster {
